# OptiMindTune

./: .gitignore  README.md  agent.py  bayesian_benchmark.py  config.py  main.py  optuna_benchmark.py  pyproject.toml  requirements.txt  scaffolding_agents.sh  test.py
SampleOutput/: logs.json
agents/: base_agent.py
agents/decision/: __init__.py  agent.py
agents/evaluation/: __init__.py  agent.py
agents/evaluator/: agent.py
agents/recommender/: __init__.py  agent.py
benchmarks/: bayesian_benchmark.py  optuna_benchmark.py  run_benchmark.py
core/: __init__.py  agent_runner.py  data_manager.py  orchestrator.py  results_manager.py  session_manager.py
optimindtune/: agent.py  main.py
output/conversations/: conversation_20250518_134524.json
sample output/: logs.json
test/: nb.ipynb
utils/: __init__.py  logger.py  rate_limiter.py
